# novastack

./: README.md  pyproject.toml
docs/api_reference/: mkdocs.yml  pyproject.toml
docs/api_reference/api_reference/: index.md
docs/api_reference/api_reference/embeddings/: huggingface.md  watsonx.md
docs/api_reference/api_reference/evaluation/: context_similarity.md
docs/api_reference/api_reference/guardrails/: watsonx.md
docs/api_reference/api_reference/llms/: litellm.md  watsonx.md
docs/api_reference/api_reference/loaders/: directory.md  docling.md  file.md  ibm_cos.md  watson_discovery.md
docs/api_reference/api_reference/observability/: watsonx.md
docs/api_reference/api_reference/prompts/: prompt_template.md
docs/api_reference/api_reference/retrievers/: watson_discovery.md
docs/api_reference/api_reference/text_chunkers/: semantic.md  sentence.md  token.md
docs/api_reference/api_reference/vector_stores/: chroma.md  elasticsearch.md
docs/api_reference/api_reference/workflows/: benchmark_report.md  index.md  overview.md  performance_report.md  run_server.md
docs/api_reference/overrides/: main.html
novastack-common/: README.md  pyproject.toml
novastack-common/novastack/common/: utils.py
novastack-common/novastack/common/http/: __init__.py  base.py
novastack-common/novastack/common/retry/: __init__.py  decorator.py  strategies.py
novastack-common/novastack_common/: __init__.py
novastack-common/novastack_common/http/: __init__.py  base.py  types.py
novastack-common/novastack_common/http/authenticators/: __init__.py  basic_authenticator.py  ibm_iam_authenticator.py  no_auth_authenticator.py  oauth2_authenticator.py
novastack-common/novastack_common/retry/: __init__.py  decorator.py  strategies.py
novastack-common/tests/http/: conftest.py  test_authenticators.py  test_http_service.py  test_security.py
novastack-common/tests/retry/: test_retry.py
novastack-commons/: README.md  (+1 more)
novastack-core/: README.md  pyproject.toml
novastack-core/novastack/core/: __init__.py  components.py  enums.py  schema.py
novastack-core/novastack/core/base/: enum.py  enums.py  schema.py
novastack-core/novastack/core/bridge/: pydantic.py
novastack-core/novastack/core/common/: __init__.py
novastack-core/novastack/core/document/: __init__.py  base.py
novastack-core/novastack/core/embeddings/: __init__.py  base.py  enums.py
novastack-core/novastack/core/evaluation/: __init__.py  base.py  context_similarity.py
novastack-core/novastack/core/guardrails/: __init__.py  base.py  enums.py  types.py
novastack-core/novastack/core/instrumentation/: __init__.py
novastack-core/novastack/core/llms/: __init__.py  base.py  decorators.py  enums.py  types.py
novastack-core/novastack/core/loaders/: __init__.py  base.py  directory.py
novastack-core/novastack/core/observability/: __init__.py  base.py  types.py
novastack-core/novastack/core/prompts/: __init__.py  base.py  utils.py
novastack-instrumentation/: README.md  pyproject.toml
novastack-instrumentation/novastack_instrumentation/: __init__.py  _core.py  _dispatcher_core.py  base.py  dispatcher.py  mixin.py
novastack-instrumentation/novastack_instrumentation/events/: __init__.py  base.py
novastack-instrumentation/novastack_instrumentation/observability/: __init__.py  base.py  console.py  debug.py  novastack_debug.py
novastack-instrumentation/novastack_instrumentation/span/: __init__.py  base.py
novastack-instrumentation/tests/: test_dispatcher.py  test_global_handler.py  test_manager.py  test_propagation.py  test_shutdown.py  test_simple_span_handler.py  test_unified_handler.py
novastack-integrations/embeddings/huggingface/: README.md  pyproject.toml
novastack-integrations/embeddings/watsonx/: README.md  pyproject.toml
novastack-integrations/guardrails/watsonx/: README.md  pyproject.toml
novastack-integrations/llms/litellm/: README.md  pyproject.toml
novastack-integrations/llms/watsonx/: README.md  pyproject.toml
novastack-integrations/loaders/docling/: README.md  pyproject.toml
novastack-integrations/loaders/file/: README.md  pyproject.toml
novastack-integrations/loaders/ibm_cos/: README.md  pyproject.toml
novastack-integrations/loaders/watson_discovery/: README.md  pyproject.toml
novastack-integrations/observability/watsonx/: .gitignore  README.md  pyproject.toml
novastack-integrations/retrievers/watson_discovery/: README.md  pyproject.toml
novastack-integrations/vector_stores/chroma/: README.md  pyproject.toml
novastack-integrations/vector_stores/elasticsearch/: README.md  pyproject.toml
novastack-telemetry/: README.md  pyproject.toml
novastack-telemetry/novastack_telemetry/: __init__.py  _dispatcher_core.py  dispatcher.py  mixin.py
novastack-telemetry/novastack_telemetry/events/: __init__.py  base.py
novastack-telemetry/novastack_telemetry/observability/: __init__.py  base.py  novastack_debug.py
novastack-telemetry/novastack_telemetry/span/: __init__.py  base.py
novastack-telemetry/tests/: test_dispatcher.py  test_global_handler.py  test_manager.py  test_propagation.py  test_shutdown.py  test_simple_span_handler.py  test_unified_handler.py
novastack-utils/: README.md  pyproject.toml
novastack-utils/novastack_utils/: __init__.py  utils.py  validation.py
novastack-utils/novastack_utils/http/: __init__.py  base.py
novastack-utils/novastack_utils/retry/: __init__.py  decorator.py  protocols.py  strategies.py
novastack-utils/tests/http/: conftest.py  test_authenticators.py  test_http_service.py  test_security.py
novastack-utils/tests/retry/: test_retry.py
novastack-workflows/: README.md  pyproject.toml
novastack-workflows/novastack/workflows/: __init__.py  decorators.py  enums.py  events.py  examples.py  exceptions.py  types.py  workflow.py
novastack-workflows/tests/: test_decorator_validation.py  test_dynamic_emission.py  test_event_buffer.py  test_join_pattern.py  test_join_validation.py  test_parallel_workflows.py  test_simple_workflow.py  test_state_management.py  test_state_persistence.py  test_timeout_retry.py  test_workflow_composition.py
(+146 files in other folders)
