[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novastack-common"
version = "1.2.0"
description = "This library contains common utilities used across various packages."
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "ruff>=0.15.8,<1.0.0",
]

[project.urls]
Repository = "https://github.com/novastack-project/novastack/tree/main/novastack-common"

[tool.hatch.build.targets.sdist]
include = ["novastack/"]

[tool.hatch.build.targets.wheel]
include = ["novastack/"]
