[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novastack-core"
version = "1.1.2"
description = "Forge data pipelines, unleash smart AI applications."
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["AI", "LLM", "QA", "RAG", "data", "observability", "retrieval", "semantic-search"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "deprecated>=1.3.1,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "nltk>=3.9.2,<4.0.0",
    "numpy>=1.26.4,<2.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "tiktoken>=0.12.0,<0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "ruff>=0.15.8,<1.0.0",
]

[project.urls]
Repository = "https://github.com/novastack-project/novastack/tree/main/novastack-core"

[tool.hatch.build.targets.sdist]
include = ["novastack/"]

[tool.hatch.build.targets.wheel]
include = ["novastack/"]
