[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novastack-telemetry"
version = "1.1.0"
description = "Provides the telemetry hooks for observability in Novastack."
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["AI", "LLM", "QA", "RAG", "data", "observability", "retrieval", "semantic-search"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "treelib>=1.8.0,<2.0.0",
    "wrapt>=2.2.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "ruff>=0.15.8,<1.0.0",
]

[project.urls]
Repository = "https://github.com/novastack-project/novastack/tree/main/novastack-telemetry"

[tool.hatch.build.targets.sdist]
include = ["novastack_telemetry/"]

[tool.hatch.build.targets.wheel]
include = ["novastack_telemetry/"]
