[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novastack-embeddings-huggingface"
version = "1.0.0"
description = "novastack integration embeddings huggingface"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "sentence-transformers>=5.2.3,<6.0.0",
    "hf-xet>=1.4.2,<1.5.0",
    "novastack-core>=1.0.0,<2.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["novastack/"]

[tool.hatch.build.targets.wheel]
include = ["novastack/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.8",
]
