[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novastack-llms-watsonx"
version = "1.0.2"
description = "novastack integration llms watsonx"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ibm-watsonx-ai>=1.5.5,<1.6.0",
    "novastack-core>=1.1.3,<2.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["novastack/"]

[tool.hatch.build.targets.wheel]
include = ["novastack/"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.15.8,<1.0.0",
]
