[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novastack-loaders-ibm-cos"
version = "1.0.0"
description = "novastack integration loaders ibm cloud object storage"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ibm-cos-sdk>=2.16.0,<3.0.0",
    "novastack-core>=1.0.0,<2.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["novastack/"]

[tool.hatch.build.targets.wheel]
include = ["novastack/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.8",
]
