[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novastack-loaders-watson-discovery"
version = "0.1.0"
description = "novastack integration loaders watson discovery"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ibm-watson>=11.2.0,<12.0.0",
    "novastack-core>=0.1.0,<0.2.0",
]

[tool.hatch.build.targets.sdist]
include = ["novastack/"]

[tool.hatch.build.targets.wheel]
include = ["novastack/"]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "ruff>=0.15.19,<0.16.0",
]
