[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novastack-vector-stores-elasticsearch"
version = "1.0.0"
description = "novastack integration vector_stores elasticsearch"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "elasticsearch>=8.19.2,<9.0.0",
    "novastack-core>=1.0.0,<2.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["novastack/"]

[tool.hatch.build.targets.wheel]
include = ["novastack/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.8",
]
